rp_1/project/k8s/network/calico-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tigera-operator
