rp_1/project/k8s/network/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: desire6g
spec:
  podSelector: { }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: smo
        - namespaceSelector:
            matchLabels:
              name: desire6g
